# YandexID

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: upload-to-pypi.yml
src/yandexid/: __init__.py  __meta.py  avatar_utils.py  validators.py
src/yandexid/errors/: yandexoauth.py
src/yandexid/schemas/: yandexid.py  yandexoauth.py
src/yandexid/yandexid/: async_yandexid.py  yandexid.py
src/yandexid/yandexoauth/: async_yandexoauth.py  yandexoauth.py
