[tool.poetry]
name = "yandexid"
version = "0.1.0"
description = "Yandex ID oauth API wrapper"
authors = ["Maxim Mosin <max@mosin.pw>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.3"

[tool.poetry.dev-dependencies]
mypy = "^0.991"
flake8 = "^6.0.0"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
